UI improvement in places#edit

--- a/app/views/places/edit.html.haml
+++ b/app/views/places/edit.html.haml
@@ -3,7 +3,8 @@
     %h2
       = t('activerecord.models.place') + ': ' + @place.name
 
-= render 'form'
+  .content-block
+    = render 'form'
 
 = content_for :page_js do
   :javascript
