New track list view for mobile version
* New design
* cross-variants js action
* fix turbolinks issue with back-button

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -33,7 +33,7 @@ $black: #000;
 
 $main-text-color: #333;
 $light-text-color: #555;
-$gray-text-color: #ccc;
+$gray-text-color: $gray;
 $table-text-color: $main-text-color;
 
 $border-color: rgba(0, 0, 0, 0.14);
