--- a/app/views/suits/index.js.erb
+++ b/app/views/suits/index.js.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 window.history.replaceState(
-  {},
+  { turbolinks: {} },
   document.title,
   "<%= url_for(index_params).html_safe %>"
 );
