--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -8,7 +8,7 @@
           #tracks-table.table.table-hover
             .thead
               = render 'table_header'
-            .tbody
+            .tbody.tracks-list
               = render @tracks
 
     .text-center.top-buffer
