--- a/app/views/tracks/show.js.erb
+++ b/app/views/tracks/show.js.erb
@@ -31,7 +31,7 @@ $('#f').val(<%= @track_presenter.range_from %>);
 $('#t').val(<%= @track_presenter.range_to %>);
 
 window.history.replaceState(
-  {},
+  { turbolinks: {} },
   document.title,
   "<%= url_for(params.permit(:id, :f, :t)).html_safe %>"
 );
