--- a/app/views/virtual_competitions/show.js.erb
+++ b/app/views/virtual_competitions/show.js.erb
@@ -1,4 +1,4 @@
 $('.virtual-competition__navbar').replaceWith('<%= j render 'navbar' %>');
 $('.virtual-competition__scoreboard').replaceWith('<%= j render 'scoreboard' %>');
 
-window.history.replaceState({}, document.title, "<%= url_for.html_safe %>");
+window.history.replaceState({ turbolinks: {} }, document.title, "<%= url_for.html_safe %>");
