--- a/app/views/places/form/_place_line_template.html.haml
+++ b/app/views/places/form/_place_line_template.html.haml
@@ -1,2 +1,2 @@
-= form.fields_for :lines, place.lines.build, child_index: '__INDEX__' do |line|
+= form.fields_for :lines, PlaceLine.new(place: place), child_index: '__LINE_INDEX__' do |line|
   = render 'places/form/place_line_fields', form: line
