Round.name -> Round.number
And all related things

--- a/app/views/events/event_tracks/_show_modal.html.haml
+++ b/app/views/events/event_tracks/_show_modal.html.haml
@@ -10,7 +10,7 @@
           %span.sr-only
             Close
       %h4.modal-title
-        = "#{t('events.show.result')}: #{@event_track.competitor.name} | #{t('disciplines.' + @event_track.round_discipline)} - #{@event_track.round_name}"
+        = "#{t('events.show.result')}: #{@event_track.competitor.name} | #{t('disciplines.' + @event_track.round_discipline)} - #{@event_track.round_number}"
 
     .modal-body
       .container-fluid
