--- a/app/views/events/scoreboards/_speed_distance_time.html.haml
+++ b/app/views/events/scoreboards/_speed_distance_time.html.haml
@@ -20,7 +20,7 @@
           - rounds.each do |round|
             %td.round-cell{colspan: 2}
               .round-cell__content
-                = round.name
+                = round.number
                 .round-cell__actions.dropdown
                   %button.btn-link{'data-toggle': 'dropdown'}
                     %i.fa.fa-ellipsis-v
