migrate organizers from use profile to use user

--- a/app/views/organizers/new.js.erb
+++ b/app/views/organizers/new.js.erb
@@ -1,10 +1,9 @@
 $('#modal').html("<%= j render('form_modal', organizer: @organizer) %>");
 $('#modal').modal('show');
 
-Skyderby.helpers.ProfileSelect(
-  $('select[name="organizer[profile_id]"]'),
+Skyderby.helpers.UserSelect(
+  $('select[name="organizer[user_id]"]'),
   {
-    only_registered: true,
     placeholder: "<%= t('organizers.form.profile_placeholder') %>"
   }
 );
