--- a/app/views/organizers/_form_modal.html.haml
+++ b/app/views/organizers/_form_modal.html.haml
@@ -16,10 +16,10 @@
 
       .modal-body
         .form-group
-          = f.label :profile, class: 'control-label col-sm-4'
+          = f.label :user, class: 'control-label col-sm-4'
           .col-sm-8
-            = f.select :profile_id,
-                       options_for_select([[organizer.name, organizer.profile_id]]),
+            = f.select :user_id,
+                       options_for_select([[organizer.name, organizer.user_id]]),
                        {},
                        class: 'form-control'
 
