--- a/app/views/organizers/_list.html.haml
+++ b/app/views/organizers/_list.html.haml
@@ -4,7 +4,7 @@
     %li.organizers__item
       %span= organizable.responsible.name
     = render organizable.organizers
-  - if policy(organizable).edit? && !organizable.finished?
+  - if editable
     = link_to polymorphic_path([:new, organizable, :organizer]), remote: true, class: 'add-organizer button button--minimal' do
       %i.fa.fa-plus
       = t('.add_judge')
