--- a/app/views/events/competitors/_competitor_cells.html.haml
+++ b/app/views/events/competitors/_competitor_cells.html.haml
@@ -5,7 +5,7 @@
   %span.competitor-suit
     = competitor.suit.manufacturer_code
     = competitor.suit_name
-  - if policy(@event).update? && !@event.finished?
+  - if can_update && !@event.finished?
     %span.competitor-controls
       = button_to event_competitor_path(@event, competitor), 
                   method: :delete, 
