--- a/app/views/events/sections/_section_row.html.haml
+++ b/app/views/events/sections/_section_row.html.haml
@@ -2,7 +2,7 @@
   %td.section-cell{colspan: columns_count}
     %span
       = section.name + ':'
-    - if policy(@event).update? && !@event.finished?
+    - if can_update
       = link_to edit_event_section_path(@event, section),
                 remote: true,
                 'data-params': { 'display_raw_results' => @display_raw_results }.to_param,
