--- a/app/views/events/sections/_section_row.html.haml
+++ b/app/views/events/sections/_section_row.html.haml
@@ -2,40 +2,9 @@
   %td.section-cell{colspan: columns_count}
     %span
       = section.name + ':'
-    - if can_update
-      = link_to edit_event_section_path(@event, section),
-                remote: true,
-                'data-params': { 'display_raw_results' => @display_raw_results }.to_param,
-                class: 'edit-section' do
-        %i.fa.fa-pencil.text-muted
 
-      - if @event.sections.many?
-        %span.pipe-edit-section.text-muted
-          |
-
-        - unless section.first_position?
-          = button_to(move_upper_event_section_path(@event, section),
-                      remote: true,
-                      params: {'display_raw_results' => @display_raw_results},
-                      method: :patch,
-                      class: 'btn-link section-up') do
-            %i.fa.fa-chevron-up.text-muted
-
-        - unless section.last_position?
-          = button_to(move_lower_event_section_path(@event, section),
-                      remote: true, 
-                      params: {'display_raw_results' => @display_raw_results},
-                      method: :patch, 
-                      class: 'btn-link section-down') do
-            %i.fa.fa-chevron-down.text-muted
-
-        %span.pipe-edit-section.text-muted
-          |
-
-      = button_to(event_section_path(@event, section),
-                method: :delete,
-                params: {'display_raw_results' => @display_raw_results},
-                confirm: t('sections.show.delete_confirmation'),
-                class: 'btn-link delete-section',
-                remote: true) do
-        %i.fa.fa-times-circle.text-muted
+    - if editable
+      = render 'events/sections/edit_section_controls',
+               event: @event,
+               section: section,
+               display_raw_results: @display_raw_results 
