--- a/app/views/sponsors/create.js.erb
+++ b/app/views/sponsors/create.js.erb
@@ -1,2 +1,2 @@
-$('#sponsors').append("<%= j render(@sponsor) %>");
+$('#sponsors').append("<%= j render(@sponsor, editable: true) %>");
 $('#modal').modal('hide');
