--- a/app/views/events/competitors/_competitor_cells.html.haml
+++ b/app/views/events/competitors/_competitor_cells.html.haml
@@ -1,24 +1,14 @@
 %td.competitor-cell
-  = link_to competitor.name.titleize,
-            profile_path(competitor.profile),
-            class: 'dotted-underline'
+  = link_to competitor.name.titleize, profile_path(competitor.profile), class: 'dotted-underline'
+
   %span.competitor-suit
     = competitor.suit.manufacturer_code
     = competitor.suit_name
-  - if policy(@event).update? && !@event.finished?
-    %span.competitor-controls
-      = button_to event_competitor_path(@event, competitor), 
-                  method: :delete, 
-                  remote: true, 
-                  params: {'display_raw_results' => @display_raw_results},
-                  class: 'delete-competitor btn-link' do
-        %i.fa.fa-times
 
-      = link_to edit_event_competitor_path(@event, competitor), 
-                remote: true,
-                'data-params': { 'display_raw_results' => @display_raw_results }.to_param,
-                class: 'edit-competitor btn-primary' do
-        %i.fa.fa-pencil
+  - if editable
+    %span.competitor-controls
+      = delete_competitor_button(@event, competitor, @display_raw_results)
+      = edit_competitor_link(@event, competitor, @display_raw_results)
 
 %td.text-center.text-muted
   %span.dotted-underline{'data-toggle' => 'tooltip', title: competitor.country_name}
