--- a/app/views/events/scoreboards/_speed_distance_time.html.haml
+++ b/app/views/events/scoreboards/_speed_distance_time.html.haml
@@ -1,8 +1,5 @@
-- cache ['scoreboard',
-         I18n.locale,
-         @event, 
-         (@display_raw_results ? 'raw' : ''), 
-         (policy(@event).update?)] do
+- can_update = policy(@event).update?
+- cache ['scoreboard', I18n.locale, @event, (@display_raw_results ? 'raw' : ''), can_update] do
   %table.table.table-bordered#results-table
     %thead
       %tr#disciplines-row
@@ -33,7 +30,7 @@
                       = link_to event_round_globe_path(@event, round), remote: true, class: 'round-map-view', rel: 'nofollow' do
                         %i.fa.fa-compass
                         3D maps
-                    - if policy(@event).update? && !@event.finished?
+                    - if can_update && !@event.finished?
                       %li.divider
                       %li
                         = button_to event_round_path(@event, round),
@@ -57,14 +54,18 @@
       %tbody
         = render 'events/sections/section_row',
                  section: section,
-                 columns_count: @scoreboard.columns_count
+                 columns_count: @scoreboard.columns_count,
+                 editable: can_update && !@event.finished?
 
         - section_competitors = @scoreboard.sections[section.id]
-        - row_number = 1
-        - section_competitors.each do |competitor|
+        - section_competitors.each_with_index do |competitor, index|
           %tr.competitor-row{id: dom_id(competitor)}
-            %td.row-number= row_number
-            = render 'events/competitors/competitor_cells', competitor: competitor
+            %td.row-number= index + 1
+
+            = render 'events/competitors/competitor_cells',
+                     competitor: competitor,
+                     editable: can_update && !@event.finished?
+
             - @event.rounds_by_discipline.each do |discipline, rounds|
               - rounds.each do |round|
                 - result_entity = competitor.event_tracks.detect { |x| x[:round_id] == round.id }
@@ -91,33 +92,20 @@
                         %i.fa.fa-search
 
 
-                      - if policy(@event).update? && !@event.finished?
-                        = link_to edit_event_event_track_path(@event, result_entity),
-                                  remote: true,
-                                  'data-params': { display_raw_results: display_raw_results }.to_param,
-                                  class: 'edit-result',
-                                  rel: 'nofollow' do
-                          %i.fa.fa-pencil
-
+                      - if can_update && !@event.finished?
+                        = edit_event_track_link(@event, result_entity, display_raw_results)
                   %td.points-cell{class: (result_entity.is_disqualified ? 'text-center' : 'text-right')}
                     - if result_entity.is_disqualified
                       %span.dotted-underline{'data-toggle' => 'tooltip',
                                               title: result_entity.disqualification_reason}
                         DQ
                     - else
-                      - if result_entity.points && result_entity.points > 0
-                        = result_entity.points(net: display_raw_results).round(1)
-                - elsif policy(@event).update? && !@event.finished?
+                      - points = event_track_points(@event, result_entity, net: display_raw_results)
+                      - if points&.positive?
+                        = points.round(1)
+                - elsif can_update && !@event.finished?
                   %td.text-center.create-result-cell
-                    = link_to new_event_event_track_path(@event), 
-                              remote: true, 
-                              'data-params': { 'event_track[competitor_id]' => competitor.id,
-                                               'event_track[round_id]' => round.id,
-                                               display_raw_results: display_raw_results }.to_param,
-                              class: 'create-result-cell__link',
-                              rel: 'nofollow' do
-                      %i.fa.fa-upload
-                      
+                    = new_event_track_link(@event, competitor, round, display_raw_results)
                   %td
 
                 - else
@@ -131,5 +119,3 @@
             %td.text-right
               - if competitor.total_points && competitor.total_points > 0
                 = competitor.total_points.round(2)
-
-          - row_number += 1
