--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,8 @@
   %head
     %title= page_title(yield(:title))
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
+    = javascript_pack_tag 'application'
+
     = csrf_meta_tags
 
     %meta{property: 'og:title', content: page_title(yield(:title))}
@@ -15,7 +17,7 @@
 
     = render 'layouts/favicon'
     = render 'layouts/google_analytics'
-    -# %meta{name:"viewport", content:"width=980, height=device-height"}
+
   %body
     :javascript
       var I18n = I18n || {};
