--- a/app/views/places/form/_exit_measurement_fields.html.haml
+++ b/app/views/places/form/_exit_measurement_fields.html.haml
@@ -6,5 +6,5 @@
   %td
     = form.hidden_field :id
     = form.hidden_field :_destroy
-    %a.place-form__mark-deleted-measurement
+    %a.place-form__mark-deleted-measurement{'data-action': 'click->places--exit-measurements#remove'}
       %i.fa.fa-times
