--- a/app/views/tracks/_filters.html.haml
+++ b/app/views/tracks/_filters.html.haml
@@ -26,7 +26,9 @@
                     options_for_select([ [place_name_by_id(query_params[:place_id]), query_params[:place_id]] ]),
                     name: 'query[place_id]',
                     class: 'form-control', 
-                    data: {remote: true, method: :GET, url: tracks_path, params: place_params})
+                    placeholder: t('tracks.index.filter_by_suit'),
+                    data: { remote: true, method: :GET, url: tracks_path, params: place_params },
+                    'data-controller': 'select2--places')
 
     .col-sm-3
       .pull-right
